finita euristica e 2approx